added performance test task

--- a/m1/build.xml
+++ b/m1/build.xml
@@ -115,6 +115,15 @@
     </junit>
   </target>
 
+  <!-- run performance testing -->
+  <target name="performanceTest" depends="build">
+    <junit>
+      <classpath refid="project.classpath" />
+      <formatter type="brief" usefile="false" />
+      <test name="testing.PerformanceTest" />
+    </junit>
+  </target>
+
   <target name="run" >
     <java classname="${main.class}" classpathref="class.path"/>
   </target>
