--- a/m2/data/test/interaction_test.properties
+++ b/m2/data/test/interaction_test.properties
@@ -1,13 +1,4 @@
-#Sun Mar 05 15:00:29 EST 2023
-getMultiClientKey=getMultiClientValue
-0=0
-1=1
-2=2
-3=3
-4=4
-5=5
-6=6
-7=7
-8=8
-putMultiUpdateKey=9
-9=9
+#Sun Mar 05 15:23:46 EST 2023
+foo=bar
+updateTestValue=updated
+foo2=bar2
